--- a/README.textile
+++ b/README.textile
@@ -86,7 +86,7 @@ We can also use the JSON query language ElasticSearch provides instead of a quer
 curl -XGET 'http://localhost:9200/twitter/tweet/_search?pretty=true' -d '
 { 
     "query" : { 
-        "term" : { "user": "kimchy" } 
+        "text" : { "user": "kimchy" }
     } 
 }'
 </pre>
