--- a/README.textile
+++ b/README.textile
@@ -36,7 +36,7 @@ First of all, DON'T PANIC. It will take 5 minutes to get the gist of what Elasti
 
 h3. Installation
 
-* Download and unzip the ElasticSearch installation.
+* "Download":http://www.elasticsearch.org/download and unzip the ElasticSearch official distribution.
 * Run @bin/elasticsearch -f@ on unix, or @bin/elasticsearch.bat@ on windows.
 * Run @curl -X GET http://localhost:9200/@.
 * Start more servers ...
